fixed testing and some general cleaning of the code